--- a/assets/scss/wallet.sass
+++ b/assets/scss/wallet.sass
@@ -2,11 +2,28 @@
   min-height: 435px
 
 .wallet
+  .active-orders
+    table
+      tbody
+        td
+          padding-left: calc(0.75rem + 0.65em)
+
+  .trading-history
+    table
+      tbody
+        td
+          padding-left: calc(0.75rem + 0.65em)
+
   .deposit-withdraw-table
     .text-truncate
       max-width: 200px
       text-overflow: ellipsis
       overflow: hidden
+
+    table
+      tbody
+        td
+          padding-left: calc(0.75rem + 0.65em)
 
   .table-restricted
     max-height: 500px
@@ -34,3 +51,9 @@
     width: 17px !important
     &:hover
       background-position: -17px 0
+
+.field-table
+  width: 25%
+
+.first-field
+  width: 50%
